tests/golden/type_errors/adt_unknown_variant.cd
enum Result { Ok(number), Empty }
let result = Result.Ok(1);
match result {
  Result.Ok(value) => { print value; }
  Result.Missing => { print 0; }
}
