tests/golden/type_errors/adt_unknown_variant.err
Type error at 5:10: enum Result has no variant Missing
    Result.Missing => { print 0; }
           ^
